--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         }  
         .new-radio.checked
         {
-           background:rgba(0,0,0,0.5) !important;
-       }
-       .new-radio
-       {
+         background:rgba(0,0,0,0.5) !important;
+     }
+     .new-radio
+     {
         background: rgba(0,0,0,0) !important;
     }
     .input-group-addon
@@ -50,9 +50,9 @@
     }
     .reicon
     {
-       color:#fff;
-   }	
-   p {
+     color:#fff;
+ }	
+ p {
     padding: 0.1em;
     font-size:16px;
     overflow-y:auto;
@@ -67,11 +67,11 @@ body.modal-open {
 }
 .select2-container .select2-selection--single
 {
-height:30px !important;
+    height:30px !important;
 }
 .form-control
 {
-height:30px !important;
+    height:30px !important;
 }
 @media screen and (max-width: 800px) {
     .unescodiv {
@@ -80,17 +80,17 @@ height:30px !important;
     .update{
         font-size:30px !important;
     }
-	.formheader {
-	display:block;
-	}
+    .formheader {
+       display:block;
+   }
 }
 @media screen and (min-width:799px){
-   .update{
+ .update{
     font-size:3vw !important;
 }
-	.formheader{
-		display:none;
-	}
+.formheader{
+  display:none;
+}
 }
 
 </style>
@@ -236,83 +236,83 @@ data-anchor="aboutsa">
     <div class="container section-wrap"
     style="">
     <div>
-       <ul class="nav nav-tabs nav-justified" style="background-color:transparent;">
-          <li class="active" data-toggle="tab">
-             <a href="#tab0">
-                 <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Why Student Ambassdor
-                 </h6></a>
-             </li>
-             <li data-toggle="tab">
-                 <a href="#tab1">
-                     <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Role of Student Ambassdor</h6></a>
-                 </li>
-                 <li data-toggle="tab">
-                     <a href="#tab2" >
-                         <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Benefits</h6></a>
-                     </li data-toggle="tab">
-                     <li>
-                         <a href="#tab3">
-                             <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Requirements</h6></a>
-                         </li>
+     <ul class="nav nav-tabs nav-justified" style="background-color:transparent;">
+      <li class="active" data-toggle="tab">
+       <a href="#tab0">
+           <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Why Student Ambassdor
+           </h6></a>
+       </li>
+       <li data-toggle="tab">
+           <a href="#tab1">
+               <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Role of Student Ambassdor</h6></a>
+           </li>
+           <li data-toggle="tab">
+               <a href="#tab2" >
+                   <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Benefits</h6></a>
+               </li data-toggle="tab">
+               <li>
+                   <a href="#tab3">
+                       <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Requirements</h6></a>
+                   </li>
 
-                     </ul>
-                 </div>
-                 <div style="background:transparent; border:transparent; color:#fff;"class="tab-content">
-                  <div class="tab-pane fade in active" id="tab0">
-                     <ul style="color:#fff;font-style:normal;font-size:20px;">
-                         <li>Actively impact the society by becoming our goodwill ambassador.</li>
-                         <li>Enhance your professional skills and develop personality.</li>
-                         <li>Get to work with the elite Ambassadors from top notch colleges.</li>
-                         <li>Improve your leadership, marketing & communication skills.</li>
-                         <li>See your creativity, innovation & ideas come to fruition.</li>
+               </ul>
+           </div>
+           <div style="background:transparent; border:transparent; color:#fff;"class="tab-content">
+              <div class="tab-pane fade in active" id="tab0">
+               <ul style="color:#fff;font-style:normal;font-size:20px;">
+                   <li>Actively impact the society by becoming our goodwill ambassador.</li>
+                   <li>Enhance your professional skills and develop personality.</li>
+                   <li>Get to work with the elite Ambassadors from top notch colleges.</li>
+                   <li>Improve your leadership, marketing & communication skills.</li>
+                   <li>See your creativity, innovation & ideas come to fruition.</li>
 
-                     </ul>
-                 </div>
-                 <div class="tab-pane fade" id='tab1'>
-                     <ul style="color:#fff;font-style:normal;font-size:20px;">
-                         <li>Serve as a bridge between k! & your college.</li>
-                         <li>Spread the word about k! to the students & faculties in your campus.</li>
-                         <li>Encourage your college students participate in the events & workshops of K!</li>
-                         <li>Display the marketing materials given by the k! team in your college.</li>
-                     </ul>
-                 </div>
-                 <div class="tab-pane fade" id='tab2'>
-                     <ul style="color:#fff;font-style:normal;font-size:20px;">
-                         <li>Delegate kits, T-shirts, Bags</li>
-                         <li>Free onsite registration</li>
-                         <li>Letter of Appreciation for being the part of Kurukshetra 2017.</li>
-                         <li>Certificates issued under the patronage of UNESCO and recognition of Ministry of Electronics and Information technology, Government of India.</li>
-                         <li>For every three registrations with your Referral ID, you will get an offer coupon worth Rs.100/-.</li>
-                         <li>One way travel allowance for the exceptionally performing Ambassadors.</li>
-                         <li>Free passes to attend Guest Lectures</li>
-                         <li>Free workshop passes, Cash prizes, free accommodation for the exceptionally performing Ambassadors.</li>
-                         <br/><b>Kurukshetra Student Ambassador Award</b><br>
-                         Exceptionally performing Student Ambassadors will be considered for Kurukshetra’s Student Ambassador Award. A cash prize worth 5k and complete travel reimbursement awaits the winner(s) who will be selected based on the norms specified by Team Kurukshetra and will be displayed at the end.
-                         <br/><b>Basic Requirements:</b><br/>
-                         Any Student Ambassador who facilitates the maximum no. of registrations with his/her Referral Id. (A minimum of 60 registrations is required for consideration.)
-
-
-                     </ul>				
-                 </div>
-                 <div class="tab-pane fade" id='tab3'>
-                     <ul style="color:#fff;font-style:normal;font-size:20px;">
-                         <li>College student - any degree & any year.</li>
-                         <li>Good interpersonal and communication skills. </li>
-                         <li>Passion for learning, creativity, innovation & information sharing.</li>
+               </ul>
+           </div>
+           <div class="tab-pane fade" id='tab1'>
+               <ul style="color:#fff;font-style:normal;font-size:20px;">
+                   <li>Serve as a bridge between k! & your college.</li>
+                   <li>Spread the word about k! to the students & faculties in your campus.</li>
+                   <li>Encourage your college students participate in the events & workshops of K!</li>
+                   <li>Display the marketing materials given by the k! team in your college.</li>
+               </ul>
+           </div>
+           <div class="tab-pane fade" id='tab2'>
+               <ul style="color:#fff;font-style:normal;font-size:20px;">
+                   <li>Delegate kits, T-shirts, Bags</li>
+                   <li>Free onsite registration</li>
+                   <li>Letter of Appreciation for being the part of Kurukshetra 2017.</li>
+                   <li>Certificates issued under the patronage of UNESCO and recognition of Ministry of Electronics and Information technology, Government of India.</li>
+                   <li>For every three registrations with your Referral ID, you will get an offer coupon worth Rs.100/-.</li>
+                   <li>One way travel allowance for the exceptionally performing Ambassadors.</li>
+                   <li>Free passes to attend Guest Lectures</li>
+                   <li>Free workshop passes, Cash prizes, free accommodation for the exceptionally performing Ambassadors.</li>
+                   <br/><b>Kurukshetra Student Ambassador Award</b><br>
+                   Exceptionally performing Student Ambassadors will be considered for Kurukshetra’s Student Ambassador Award. A cash prize worth 5k and complete travel reimbursement awaits the winner(s) who will be selected based on the norms specified by Team Kurukshetra and will be displayed at the end.
+                   <br/><b>Basic Requirements:</b><br/>
+                   Any Student Ambassador who facilitates the maximum no. of registrations with his/her Referral Id. (A minimum of 60 registrations is required for consideration.)
 
 
+               </ul>				
+           </div>
+           <div class="tab-pane fade" id='tab3'>
+               <ul style="color:#fff;font-style:normal;font-size:20px;">
+                   <li>College student - any degree & any year.</li>
+                   <li>Good interpersonal and communication skills. </li>
+                   <li>Passion for learning, creativity, innovation & information sharing.</li>
 
-                     </ul>
-                 </div>
-             </div>
-         </div>
-     </div>
-     <!-- .section-content -->
-     <div class="animation text-center"
-     data-appear-animation="bounceInUp"
-     data-appear-animation-delay="100">
-     <a href="#form"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
- </div>
+
+
+               </ul>
+           </div>
+       </div>
+   </div>
+</div>
+<!-- .section-content -->
+<div class="animation text-center"
+data-appear-animation="bounceInUp"
+data-appear-animation-delay="100">
+<a href="#form"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
+</div>
 </section>
 <!-- .section -->
 
@@ -332,42 +332,36 @@ data-anchor="form">
     <div class="particle" style="width: 100%;height: 100%;position: absolute;"></div>
     <div class="container section-wrap" style="margin-top:88px;">
         <div>
-         <div>
-             <h1 style="color: rgb(255, 247, 204); padding-bottom:-10px;" class="section-title text-center formheader" data-appear-animation="fadeInDown" data-appear-animation-delay="100">STUDENT AMBASSDOR REGISTRATION</h1>						
-             <div align="center" style="max-height:800px;">
-               <form id="sa_registration_form" style="position: relative; width:50%;min-width: 300px; background: rgba(0, 0, 0, 0.2); padding-bottom:55px; padding-left:30px; padding-right:20px; padding-top:10px;" method="post">
-                <div class="input-group" style="padding-bottom:13px;">
-                 <span class="input-group-addon"><i class="reicon glyphicon glyphicon-user"></i></span>
-                 <input id="name" type="text" class="form-control" name="name" placeholder="Your name" onblur="validatename(this)">
-             </div>
-             <div class="input-group" style="padding-bottom:13px;">
-                 <span class="input-group-addon"><i class="reicon fa fa-phone" style="width:16px;"></i></span>
-                 <input id="phone" type="text" class="form-control" name="contactNumber" placeholder="Your mobile number" onblur="validatephone(this)">
-             </div>
+           <div>
+              <h1 class="section-title text-center" data-appear-animation="fadeInDown" data-appear-animation-delay="100" style="color: white">SA Registration</h1>
+              <div align="center" style="max-height:800px;">
+                 <form id="sa_registration_form" style="position: relative; width:50%;min-width: 300px; background: rgba(0, 0, 0, 0.2); padding-bottom:20px; padding-left:20px; padding-right:20px; padding-top:20px;" method="post">
+                    <div class="input-group" style="padding-bottom:13px;">
+                       <span class="input-group-addon"><i class="reicon glyphicon glyphicon-user"></i></span>
+                       <input id="name" type="text" class="form-control" name="name" placeholder="Your name" onblur="validatename(this)" required>
+                   </div>
+                   <div class="input-group" style="padding-bottom:13px;">
+                       <span class="input-group-addon"><i class="reicon fa fa-phone" style="width:16px;"></i></span>
+                       <input id="phone" type="text" class="form-control" name="contactNumber" placeholder="Your mobile number" onblur="validatephone(this)" required>
+                   </div>
 
-             <div class="input-group" style="padding-bottom:13px;">
-                 <span class="input-group-addon"><i class="reicon fa fa-envelope"></i></span>
-                 <input id="email" type="text" class="form-control" name="emailId" placeholder="Your email-id" onblur="validatemail(this)">
-             </div>
+                   <div class="input-group" style="padding-bottom:13px;">
+                       <span class="input-group-addon"><i class="reicon fa fa-envelope"></i></span>
+                       <input id="email" type="text" class="form-control" name="emailId" placeholder="Your email-id" onblur="validatemail(this)" required>
+                   </div>
 
-             <div class="input-group" style="padding-bottom:13px;">
-                 <span class="input-group-addon"><i class="reicon glyphicon glyphicon-lock"></i></span>
-                 <input id="pass" type="password" class="form-control" name="password" placeholder="Password (min 8 characters)" onblur="validatepass(this)">
-             </div>
-             <div class="input-group">
-                 <span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
-                 <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
-             </div>
-				   <!--div class="input-group date" data-provide="datepicker">
-						<span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
-						<input type="text" placeholder="MM/DD/YYY" class="form-control" data-provide="datepicker" data-date-end-date="0d">
-						<!--div class="input-group-addon">
-							<span class="glyphicon glyphicon-th"></span>
-						</div>
-					</div-->
-                 <div style="color:#fff;" class="input-group pull-left">
-                   Gender:
-                   <label style="color:#fff;" class="new radio-inline">
+                   <div class="input-group" style="padding-bottom:13px;">
+                       <span class="input-group-addon"><i class="reicon glyphicon glyphicon-lock"></i></span>
+                       <input id="pass" type="password" class="form-control" name="password" placeholder="Password (min 8 characters)" onblur="validatepass(this)" required>
+                   </div>
+                   <div class="input-group">
+                       <span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
+                       <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/ required>
+                   </div>
+
+                   <div style="color:#fff;" class="input-group pull-left">
+                     Gender:
+                     <label style="color:#fff;" class="new radio-inline">
                       <!--div class="new-radio"-->
                       <input style="background:rgba(0,0,0,0.2);" type="radio" name="gender"  value="M" checked>
                       <span></span>
@@ -382,8 +376,8 @@ data-anchor="form">
                       <!--/div-->  
                   </label>
               </div>
-			  <div class="form-group city">
-			  </div>
+              <div class="form-group city">
+              </div>
               <div class="form-group college">
               </div>
               <div class="form-group courses">
@@ -392,6 +386,7 @@ data-anchor="form">
               </div>
               <div class="form-group year">
               </div>
+              <input type="hidden" id="sa" name="sa" />
               <input type="submit" class="btn btn-success" value="Register">
           </form>
       </div>
@@ -430,11 +425,15 @@ data-anchor="form">
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 <script type="text/javascript" src="js/particleground.min.js"></script>
 
+
+<!-- form data -->
+<script src="js/list.js"></script>
+
 <!--colleges list-->
 <script>
 	var collegesArray = new Array();
 	var col = new XMLHttpRequest();
-	var colUrl = "https://api.myjson.com/bins/buxtx";
+	var colUrl = "https://api.myjson.com/bins/ifw5l ";
 	
 	col.onreadystatechange = function() {
 		if(col.readyState == 4 && col.status == 200){
@@ -464,7 +463,7 @@ data-anchor="form">
 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
 <script>
- WebFont.load({
+   WebFont.load({
     google: {
         families: ['Abril Fatface', 'Aref Ruqaa', 'Raleway:400,500,700']
     }
@@ -528,8 +527,6 @@ data-anchor="form">
     <script type='text/javascript' src='js/select2.min.js'></script>
 
 
-    <!-- form data -->
-    <script src="js/list.js"></script>
     <script type='text/javascript' src='assets/js/main68b3.js'></script>
     <script type='text/javascript' src='js/utils.js'></script>
 
