--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ data-anchor="form">
               <div class="form-group year">
               </div>
               <input type="hidden" id="sa" name="sa" />
-              <input type="submit" class="btn btn-success" value="Register">
+              <input type="submit" class="btn btn-success" value="Register" style="background: #0000">
           </form>
       </div>
   </div><!-- .section-title-block -->					
