--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ data-anchor="form">
            <div>
               <h1 class="section-title text-center" data-appear-animation="fadeInDown" data-appear-animation-delay="100" style="color: white">SA Registration</h1>
               <div align="center" style="max-height:800px;">
-                 <form id="sa_registration_form" style="position: relative; width:50%;min-width: 300px; background: rgba(0, 0, 0, 0.2); padding-bottom:20px; padding-left:20px; padding-right:20px; padding-top:20px;" method="post">
+                 <form id="sa_registration_form" style="position: relative; width:50%;min-width: 300px; background: rgba(0, 0, 0, 0.2); padding-bottom:20px; padding-left:20px; padding-right:20px; padding-top:20px;" method="post" autocomplete="off">
                     <div class="input-group" style="padding-bottom:13px;">
                        <span class="input-group-addon"><i class="reicon glyphicon glyphicon-user"></i></span>
                        <input id="name" type="text" class="form-control" name="name" placeholder="Your name" onblur="validatename(this)" required>
