--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ data-anchor="introduction">
 <div class="animation text-center"
 data-appear-animation="bounceInUp"
 data-appear-animation-delay="100">
-<a href="aboutsa"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
+<a href="#aboutsa"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
 </div>
 </section>
 <!-- .section -->
