--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@ data-anchor="introduction">
 
         Are you are a college goer? Do you want to make an actual contribution to society?<br/>
 
-        Then <b>sign up for the Student Ambassador program of k!17</b>. The SA program at k! is about meeting new people, being involved in new situations and making new and positive contributions to society.<br/>
+        Then <b style="color: #d73e4d">sign up for the Student Ambassador program of k!17</b>. The SA program at k! is about meeting new people, being involved in new situations and making new and positive contributions to society.<br/>
 
-        One of the biggest goals of Kurukshetra is to positively impact society. Climate Change is one of the biggest threats facing mankind today. In the words of UN Secretary General Bank Ki-moon, “Climate change does not respect border; it does not respect who you are – rich or poor, small or big. That is why it is numbered among the ‘global challenges’, which require global solidarity.” In keeping with that, <b>Climate Change was selected as the theme of the 11th edition of Kurukshetra</b>.<br/>
+        One of the biggest goals of Kurukshetra is to positively impact society. <b style="color: #d73e4d">Climate Change</b> is one of the biggest threats facing mankind today. In the words of UN Secretary General Bank Ki-moon, “Climate change does not respect border; it does not respect who you are – rich or poor, small or big. That is why it is numbered among the ‘global challenges’, which require global solidarity.” In keeping with that, <b style="color: #d73e4d">Climate Change was selected as the theme of the 11th edition of Kurukshetra</b>.<br/>
 
-        <b>As a Student Ambassador for Kurukshetra, you will also work with us towards this cause as goodwill ambassadors in the fight against climate change</b>. You will join an elite team of individuals whose collective ideas will be pooled towards solving this issue – giving you the chance to not only be a part of the team but also see your ideas take shape.<br/>
+        <b >As a Student Ambassador for Kurukshetra, you will also work with us towards this cause as goodwill ambassadors in the fight against climate change</b>. You will join an elite team of individuals whose collective ideas will be pooled towards solving this issue – giving you the chance to not only be a part of the team but also see your ideas take shape.<br/>
     </p>
 
 </div>
