--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ data-anchor="form">
 </div>
 </div><!-- .section-content -->
 <!-- .section-content -->
-<footer class="site-footer" style="background-color: #f7f7f1;padding:18px; bottom:-85px;">
+<!-- <footer class="site-footer" style="background-color: #f7f7f1;padding:18px; bottom:-85px;">
         <div class="row">
             <div class="col-sm-6 left-align">
                 <div style="font-size:15px; font-style: normal;" class="copyright"><b>Copyright 2016 @ CEG Tech Forum. All rights reserved.</b></div>
@@ -405,7 +405,7 @@ data-anchor="form">
                 <a href="#" class="scroll-to-top"><i class="fa fa-angle-double-up"></i></a>
             </div>
         </div>
-</footer>
+</footer> -->
 <!-- .site-footer -->
 <style type="text/css" scoped="">
     .site-footer {
