--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ data-anchor="introduction">
 <div class="animation text-center"
 data-appear-animation="bounceInUp"
 data-appear-animation-delay="100">
-<a href="#aboutsa"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
+<a href="#about"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
 </div>
 </section>
 <!-- .section -->
@@ -229,7 +229,7 @@ data-nav-color-text=" #212f3c "
 data-color="#768088"
 data-title-color="#fff7cc"
 data-title="about"
-data-anchor="aboutsa">
+data-anchor="about">
 <div class="particle" style="width: 100%;height: 100%;position: absolute;"></div>
 
 <div class="section-content ">
